--- a/playbooks/bastion-node/playbook.yml
+++ b/playbooks/bastion-node/playbook.yml
@@ -1,10 +1,10 @@
-- hosts: localhost
+- name: Configuring globals.yml settings
+  hosts: localhost
   remote_user: root
   connection: local
   vars:
     network_interface: "ens18"
     ansible_ssh_private_key_file: "/home/user0/.ssh/deploy-key"
-  
   tasks:
     - name: Adjust kolla_base_distro
       become: true
@@ -12,8 +12,7 @@
         path: /etc/kolla/globals.yml
         regexp: '#kolla_base_distro: "rocky"'
         replace: 'kolla_base_distro: "debian"'
-        backup: yes
-    
+        backup: true
     - name: Replace network_interface
       become: true
       ansible.builtin.replace:
