--- a/playbooks/bastion-node/docker.yml
+++ b/playbooks/bastion-node/docker.yml
@@ -13,3 +13,13 @@
       ansible.builtin.command: dnf install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin -y
       register: output
       changed_when: output.rc == 0
+    - name: Enable Docker service
+      become: true
+      ansible.builtin.systemd:
+        name: docker
+        enabled: true
+    - name: Start Docker service
+      become: true
+      ansible.builtin.systemd:
+        name: docker
+        state: started
