mess w debug file

--- a/all-in-one-deploy/debug.yml
+++ b/all-in-one-deploy/debug.yml
@@ -8,3 +8,4 @@
       become: true
       ansible.builtin.debug:
         msg: "{{ ansible_distribution }}"
+      when: ansible_facts['os_family'] == "Redhat"
