--- a/all-in-one-deploy/debug.yml
+++ b/all-in-one-deploy/debug.yml
@@ -7,5 +7,5 @@
     - name: Debug
       become: true
       ansible.builtin.debug:
-        msg: "{{ ansible_distribution }}"
+        msg: "{{ ansible_distribution }} {{ os_family }}"
       when: ansible_facts['os_family'] == "Redhat"
