mess w debug file

--- a/all-in-one-deploy/debug.yml
+++ b/all-in-one-deploy/debug.yml
@@ -7,5 +7,5 @@
     - name: Debug
       become: true
       ansible.builtin.debug:
-        msg: "{{ ansible_distribution }} {{ os_family }}"
+        msg: "{{ ansible_distribution }} {{ ansible_facts }}"
 
