--- a/all-in-one-deploy/docker-apt.yml
+++ b/all-in-one-deploy/docker-apt.yml
@@ -13,6 +13,6 @@
   changed_when: output.rc == 0
 - name: Install docker (apt)
   become: true
-  ansible.builtin.command: dnf install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin -y
+  ansible.builtin.command: apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
   register: output
   changed_when: output.rc == 0
