temporarily finished automatic deployment of openstack

--- a/all-in-one-deploy/aio-deploy.yml
+++ b/all-in-one-deploy/aio-deploy.yml
@@ -9,3 +9,13 @@
       ansible.builtin.command: kolla-ansible -i ./all-in-one bootstrap-servers
       register: output
       changed_when: output.rc == 0
+    - name: Precheck
+      become: true
+      ansible.builtin.command: kolla-ansible -i ./all-in-one prechecks
+      register: output
+      changed_when: output.rc == 0
+    - name: Deploy
+      become: true
+      ansible.builtin.command: kolla-ansible -i ./all-in-one deploy
+      register: output
+      changed_when: output.rc == 0
