--- a/all-in-one-deploy/playbook.yml
+++ b/all-in-one-deploy/playbook.yml
@@ -26,3 +26,6 @@
 
 - name: Configuring globals.yml settings
   ansible.builtin.import_playbook: setup-config-files.yml
+
+- name: AIO Deploy
+  ansible.builtin.import_playbook: aio-deploy.yml
