--- a/all-in-one-deploy/vars/global-vars.yml
+++ b/all-in-one-deploy/vars/global-vars.yml
@@ -1,3 +1,4 @@
+kolla_base_distro: "debian"
 network_interface: "eth0"
 neutron_external_interface: "eth1"
 kolla_internal_vip_address: "10.10.10.254"
