--- a/all-in-one-deploy/setup-config-files.yml
+++ b/all-in-one-deploy/setup-config-files.yml
@@ -12,23 +12,23 @@
       ansible.builtin.replace:
         path: /etc/kolla/globals.yml
         regexp: '#kolla_base_distro: "rocky"'
-        replace: 'kolla_base_distro: "debian"'
+        replace: 'kolla_base_distro: "{{ kolla_base_distro }}"'
         backup: true
     - name: Replace network_interface
       become: true
       ansible.builtin.replace:
         path: /etc/kolla/globals.yml
         regexp: '#network_interface: "eth0"'
-        replace: 'network_interface: "enp6s18"'
+        replace: 'network_interface: "{{ network_interface }}"'
     - name: Replace neutron_external_interface
       become: true
       ansible.builtin.replace:
         path: /etc/kolla/globals.yml
         regexp: '#neutron_external_interface: "eth1"'
-        replace: 'neutron_external_interface: "enp6s19"'
+        replace: 'neutron_external_interface: "{{ neutron_external_interface }}"'
     - name: Replace kolla_internal_vip_address
       become: true
       ansible.builtin.replace:
         path: /etc/kolla/globals.yml
         regexp: '#kolla_internal_vip_address: "10.10.10.254"'
-        replace: 'kolla_internal_vip_address: "192.168.50.254"'
+        replace: 'kolla_internal_vip_address: "{{ kolla_internal_vip_address }}"'
