--- a/openstack-infra/instances/dmz-host.yml
+++ b/openstack-infra/instances/dmz-host.yml
@@ -6,6 +6,6 @@
         state: present
         name: DMZ-host
         image: debian-12-generic-amd64
-        flavor: m1.tiny
+        flavor: m1.small
         network: dmz-net1
         key_name: mykey
