--- a/openstack-infra/vm-image/prepare-vm-images.yml
+++ b/openstack-infra/vm-image/prepare-vm-images.yml
@@ -1,6 +1,16 @@
 - name: Prepare VM Images
   hosts: localhost
   tasks:
+    - name: Download cirros image
+      ansible.builtin.get_url:
+        url: https://github.com/cirros-dev/cirros/releases/download/0.6.2/cirros-0.6.2-x86_64-disk.img
+        dest: cirros-0.6.2-x86_64-disk.img
+        mode: 644
+    - name: Download debian image
+      ansible.builtin.get_url:
+        url: https://cdimage.debian.org/images/cloud/bookworm/20251006-2257/debian-12-generic-amd64-20251006-2257.qcow2
+        dest: debian-12-generic-amd64-20251006-2257.qcow2
+        mode: 644
     - name: Create debian bookworm generic image
       openstack.cloud.image:
         state: present
