add cinder config

--- a/all-in-one-deploy/playbook.yml
+++ b/all-in-one-deploy/playbook.yml
@@ -24,6 +24,9 @@
         name: docker
         state: started
 
+- name: Configure cinder
+  ansible.builtin.import_playbook: cinder/main.yml
+
 - name: Configuring globals.yml settings
   ansible.builtin.import_playbook: setup-config-files.yml
 
