--- a/all-in-one-deploy/setup-config-files.yml
+++ b/all-in-one-deploy/setup-config-files.yml
@@ -38,20 +38,20 @@
       become: true
       ansible.builtin.replace:
         path: /etc/kolla/globals.yml
-        regexp: 'enable_cinder_backend_lvm: "no"'
+        regexp: '#enable_cinder_backend_lvm: "no"'
         replace: 'enable_cinder_backend_lvm: yes'
     - name: Enable Cinder 1.2
       become: true
       ansible.builtin.replace:
         path: /etc/kolla/globals.yml
-        regexp: '#enable_cinder_backend_iscsi: "\{\{ enable_cinder_backend_lvm | bool }}"'
-        replace: 'enable_cinder_backend_iscsi: "\{\{ enable_cinder_backend_lvm | bool }}"'
+        regexp: '#enable_cinder_backend_iscsi: {{ "{{ enable_cinder_backend_lvm | bool }}" | regex_escape() }}'
+        replace: 'enable_cinder_backend_iscsi: {{ "{{ enable_cinder_backend_lvm | bool }}" | regex_escape() | regex_replace("\\", "") }}'
     - name: Enable Cinder 1.3
       become: true
       ansible.builtin.replace:
         path: /etc/kolla/globals.yml
-        regexp: '#enable_iscsid: "\{\{ enable_cinder | bool and enable_cinder_backend_iscsi | bool }}"'
-        replace: 'enable_iscsid: "\{\{ enable_cinder | bool and enable_cinder_backend_iscsi | bool }}"'
+        regexp: '#enable_iscsid: {{ "{{ enable_cinder | bool and enable_cinder_backend_iscsi | bool }}" | regex_escape() }}'
+        replace: 'enable_iscsid: {{ "{{ enable_cinder | bool and enable_cinder_backend_iscsi | bool }}" | regex_escape() | regex_replace("\\", "") }}'
     - name: Enable Cinder 1.4
       become: true
       ansible.builtin.replace:
