--- a/all-in-one-deploy/cinder/main.yml
+++ b/all-in-one-deploy/cinder/main.yml
@@ -11,7 +11,7 @@
       changed_when: output.rc == 0
     - name: Initialize physical volume
       become: true
-      ansible.builtin.command: pvcreate {{ device }}
+      ansible.builtin.command: pvcreate -ff {{ device }}
       register: output
       changed_when: output.rc == 0
     - name: Create volume group
