--- a/all-in-one-deploy/swift/main.yml
+++ b/all-in-one-deploy/swift/main.yml
@@ -4,13 +4,18 @@
   remote_user: root
   connection: local
   tasks:
+    - name: Install dependencies
+      become: true
+      ansible.builtin.command: apt -y install xfsprogs
+      register: output
+      changed_when: output.rc == 0
     - name: Create disk partition table
       become: true
       ansible.builtin.shell: |
         index=0
         for d in {{ swift_device }}; do
           parted /dev/${d} -s -- mklabel gpt mkpart {{ swift_device_name }} 1 -1
-          sudo mkfs.xfs -f -L d${index} /dev/${d}1
+          mkfs.xfs -f -L d${index} /dev/${d}1
           (( index++ ))
         done
       register: output
