--- a/all-in-one-deploy/swift/main.yml
+++ b/all-in-one-deploy/swift/main.yml
@@ -19,6 +19,7 @@
           mkfs.xfs -f -L d${index} /dev/${d}1
           (( index++ ))
         done
+        return 0
       args:
         executable: /bin/bash
       register: output
