--- a/all-in-one-deploy/manila/setup-config-files.yml
+++ b/all-in-one-deploy/manila/setup-config-files.yml
@@ -12,7 +12,7 @@
         replace: 'enable_manila: "yes"'
     - name: Check Manila backend type
       become: true
-      ansible.builtin.shell: awk '/enabled_share_backends/{print $3}' manila/manila.conf
+      ansible.builtin.shell: awk '/enabled_share_backends/{print $3}' manila.conf
       register: output
       changed_when: output.rc == 0
     - name: Enable manila 1.1
