--- a/all-in-one-deploy/playbook.yml
+++ b/all-in-one-deploy/playbook.yml
@@ -44,3 +44,6 @@
 
 - name: AIO Deploy
   ansible.builtin.import_playbook: aio-deploy.yml
+
+- name: Post deploy
+  ansible.builtin.import_playbook: post-deploy.yml
