disable creating test instances

--- a/openstack-infra/instances/main.yml
+++ b/openstack-infra/instances/main.yml
@@ -5,8 +5,8 @@
       ansible.builtin.debug:
         msg: "instance"
 
-- name: Configure DMZ host
-  ansible.builtin.import_playbook: dmz-host.yml
+#- name: Configure DMZ host
+#  ansible.builtin.import_playbook: dmz-host.yml
 
-- name: Configure private vms
-  ansible.builtin.import_playbook: private-vms.yml
+#- name: Configure private vms
+#  ansible.builtin.import_playbook: private-vms.yml
