add host routing to make internet accessible from network instances

--- a/all-in-one-deploy/playbook.yml
+++ b/all-in-one-deploy/playbook.yml
@@ -48,5 +48,8 @@
 - name: AIO Deploy
   ansible.builtin.import_playbook: aio-deploy.yml
 
+- name: Host routing
+  ansible.builtin.import_playbook: host-routing/main.yml
+
 - name: Post deploy
   ansible.builtin.import_playbook: post-deploy.yml
