change file saving path

--- a/all-in-one-deploy/octavia/main.yml
+++ b/all-in-one-deploy/octavia/main.yml
@@ -30,7 +30,7 @@
     - name: Build Amphora image 1.2
       ansible.builtin.copy:
         src: octavia/diskimage-create/amphora-x64-haproxy.qcow2
-        dest: /tmp/amphora-x64-haproxy.qcow2
+        dest: /amphora-x64-haproxy.qcow2
         mode: '0644'
     - name: Generate CA cert for Octavia deployment
       ansible.builtin.command: kolla-ansible octavia-certificates
